<resources>
    <string name="app_name">Food Saver</string>

    <!--  Main Activity  -->
    <string name="posts_btn">View Posts</string>
    <string name="owner_login_btn">Owner Login</string>
    <string name="registration_btn">Owner Registration</string>
    <string name="submission_btn"> Owner Submission</string>

    <!--  Registration Activity  -->
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="email_error"></string>
    <string name="password_error"></string>

    <!--  Login Activity  -->
    <string name="login_btn">Login</string>
    <string name="customer_login_btn">Customer Login</string>

    <!--  User Activity  -->
    <string name="user_email">Your Email:</string>
    <string name="user_uid">UID:</string>
    <string name="user_post_submission">Post Submission</string>
    <string name="user_sign_out">Sign Out</string>

    <!--  Posts Activity  -->
    <string name="posts_label">Posts</string>

    <!--  Submission Activity  -->
    <string name="owner_name">Owner Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address (Street, City, Zip)</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="upload_image_btn">Upload Image</string>
    <string name="submit_btn">Submit</string>

    <string name="invalid_name">Enter Valid Name</string>
    <string name="invalid_number">Enter valid phone number</string>
    <string name="invalid_storename">Enter valid store name</string>
    <string name="invalid_address">Enter valid address</string>
    <string name="image_of_food">Image of Food</string>

    <!--  Submission Detail  -->
    <string name="submission_detail_back_btn">Back</string>
    <string name="submission_detail_claim_btn">Claim</string>

    <!--  Customer Activity  -->
    <string name="recent_order_label">Your recent order:</string>
    <string name="recent_order_food_name">Food Name: </string>
    <string name="recent_order_desc">Food Desc: </string>
    <string name="recent_order_address">Address: </string>
    <string name="recent_order_mobile">Mobile: </string>
</resources>