<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/design_default_color_background">

    <TextView
        android:id="@+id/t11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/idImage1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:padding="5dp" />

    <TextView
        android:id="@+id/Address1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="00sp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Mobile1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="00sp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/FoodDec1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:padding="5dp"
        android:text="@string/submission_detail_back_btn"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnclaim"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:padding="5dp"
        android:text="@string/submission_detail_claim_btn"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>